--- a/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
@@ -1,17 +1,31 @@
 <div class="p-grid p-fluid" [formGroup]="formGroup" (ngSubmit)="adicionarTelefoneALista()">
     <div class="p-col-12 p-grid" formGroupName="responsavel">
-        <div nInputText label="Nome do Responsável" formControlName="nomeDoResponsavel" class="p-md-6 p-sm-12"></div>
-        <div nAutoComplete [service]="grauDeParentescoService" field="valor" formControlName="grauDeParentescoId"
-            label="Grau de Parentesco" class="p-md-6 p-sm-12"></div>
+        <div
+            nInputText
+            label="Nome do Responsável"
+            formControlName="nomeDoResponsavel"
+            class="p-md-6 p-sm-12"
+        ></div>
+        <div
+            nAutoComplete
+            [service]="grauDeParentescoService"
+            field="valor"
+            formControlName="grauDeParentescoId"
+            label="Grau de Parentesco"
+            class="p-md-6 p-sm-12"
+        ></div>
     </div>
-
 </div>
 
 <form [formGroup]="telefone" (ngSubmit)="adicionarTelefoneALista()">
     <div class="p-grid">
         <div class="p-md-3 p-sm-12">
             <span class="p-float-label">
-                <p-dropdown [options]="tiposDeTelefone" formControlName="tipo" (onChange)="tipoDeMascara($event)">
+                <p-dropdown
+                    [options]="tiposDeTelefone"
+                    formControlName="tipo"
+                    (onChange)="tipoDeMascara($event)"
+                >
                 </p-dropdown>
                 <label>Tipos De Telefone</label>
             </span>
@@ -19,17 +33,44 @@
 
         <div class="p-md-2 p-sm-12">
             <span class="p-float-label">
-                <p-autoComplete field="valor" [suggestions]="listaDDD" formControlName="ddd"
-                    (completeMethod)="buscaDDD($event)" [dropdown]="true"></p-autoComplete>
+                <p-autoComplete
+                    field="valor"
+                    [suggestions]="listaDDD"
+                    formControlName="ddd"
+                    (completeMethod)="buscaDDD($event)"
+                    [dropdown]="true"
+                ></p-autoComplete>
                 <label>DDD</label>
             </span>
+            <p-message
+                severity="error"
+                text="DDD obrigatório"
+                *ngIf="
+                    telefone.controls['ddd'].errors?.required && telefone.controls['ddd'].touched
+                "
+            >
+            </p-message>
         </div>
 
         <div class="p-md-3 p-sm-12">
             <span class="p-float-label">
-                <p-inputMask type="text" formControlName="numero" mask="{{mascara}}"></p-inputMask>
+                <p-inputMask
+                    type="text"
+                    formControlName="numero"
+                    mask="{{ mascara }}"
+                ></p-inputMask>
                 <label>Telefone</label>
             </span>
+
+            <p-message
+                severity="error"
+                text="Número do paciente obrigatório"
+                *ngIf="
+                    telefone.controls['numero'].errors?.required &&
+                    telefone.controls['numero'].touched
+                "
+            >
+            </p-message>
         </div>
 
         <div class="p-md-4 p-sm-12">
@@ -38,12 +79,16 @@
                 <label>Observação</label>
             </span>
         </div>
-
     </div>
 
     <div class="p-grid">
         <div class="p-col-12">
-            <p-button label="Adicionar" type="button" (onClick)="adicionarTelefoneALista()">
+            <p-button
+                label="Adicionar"
+                type="button"
+                [disabled]="telefone.invalid"
+                (onClick)="adicionarTelefoneALista()"
+            >
             </p-button>
         </div>
     </div>
@@ -58,5 +103,4 @@
             </basis-datatable>
         </div>
     </div>
-
 </form>
