--- a/frontend/src/app/pacientes/formulario/telefone/telefone.component.html
+++ b/frontend/src/app/pacientes/formulario/telefone/telefone.component.html
@@ -2,7 +2,11 @@
     <div class="p-grid responsividade">
         <div class="p-md-3 p-sm-12">
             <span class="p-float-label">
-                <p-dropdown [options]="tiposDeTelefone" formControlName="tipo" (onChange)="tipoDeMascara($event)">
+                <p-dropdown
+                    [options]="tiposDeTelefone"
+                    formControlName="tipo"
+                    (onChange)="tipoDeMascara($event)"
+                >
                 </p-dropdown>
                 <label>Tipos De Telefone</label>
             </span>
@@ -10,17 +14,43 @@
 
         <div class="p-md-2 p-sm-12">
             <span class="p-float-label">
-                <p-autoComplete field="valor" [suggestions]="listaDDD" formControlName="ddd"
-                    (completeMethod)="buscaDDD($event)" [dropdown]="true"></p-autoComplete>
+                <p-autoComplete
+                    field="valor"
+                    [suggestions]="listaDDD"
+                    formControlName="ddd"
+                    (completeMethod)="buscaDDD($event)"
+                    [dropdown]="true"
+                ></p-autoComplete>
                 <label>DDD</label>
             </span>
+            <p-message
+                severity="error"
+                text="DDD obrigatório"
+                *ngIf="
+                    telefone.controls['ddd'].errors?.required && telefone.controls['ddd'].touched
+                "
+            >
+            </p-message>
         </div>
 
         <div class="p-md-3 p-sm-12">
             <span class="p-float-label">
-                <p-inputMask type="text" formControlName="numero" mask="{{mascara}}"></p-inputMask>
+                <p-inputMask
+                    type="text"
+                    formControlName="numero"
+                    mask="{{ mascara }}"
+                ></p-inputMask>
                 <label>Telefone</label>
             </span>
+            <p-message
+                severity="error"
+                text="Número do paciente obrigatório"
+                *ngIf="
+                    telefone.controls['numero'].errors?.required &&
+                    telefone.controls['numero'].touched
+                "
+            >
+            </p-message>
         </div>
 
         <div class="p-md-4 p-sm-12">
@@ -29,12 +59,16 @@
                 <label>Observação</label>
             </span>
         </div>
-
     </div>
 
     <div class="p-grid">
         <div class="p-col-12">
-            <p-button label="Adicionar" type="button" (onClick)="adicionarTelefoneALista()">
+            <p-button
+                label="Adicionar"
+                type="button"
+                (onClick)="adicionarTelefoneALista()"
+                [disabled]="telefone.invalid"
+            >
             </p-button>
         </div>
     </div>
